# drf-ecommerce-project

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
core/: urls.py
core/product/: admin.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
core/product/admin/: __init__.py  categoria_admin.py  linha_de_produto_admin.py  marca_admin.py  produto_admin.py  tipo_de_produto_admin.py
core/product/fields/: order_field.py
core/product/migrations/: 0001_initial.py  0002_alter_produto_tipo.py  0002_produtoimage.py  0002_rename_preço_linhadeproduto_preco.py  0003_alter_categoria_nome.py  0003_produtoimagem_delete_produtoimage.py  0004_atributo_atributovalor_atributolinhadeproduto_and_more.py  0004_produto_is_active_alter_categoria_nome_and_more.py  0005_linhadeproduto.py  0005_remove_atributolinhadeproduto_created_at_and_more.py  0006_tipodeproduto_alter_atributovalor_options_and_more.py  0007_tipodeprodutoatributos_tipodeproduto_atributo.py  0008_alter_tipodeprodutoatributos_tipo_de_produto.py  0009_remove_produto_tipo_produto_tipo_produto_and_more.py  0010_alter_tipodeprodutoatributos_tipo_de_produto.py  0011_alter_produto_tipo_produto.py  0012_categoria_is_active.py  0013_remove_produto_marca_remove_produto_tipo_produto_and_more.py  0014_carrinhoitem_carrinho.py
core/product/models/: __init__.py  atributo_de_linha_de_produto_model.py  atributo_model.py  atributo_valor_model.py  carrinho_model.py  categoria_model.py  item.py  marca_model.py  (+6 more)
core/settings/: base.py  local.py
core/tests/: conftest.py  factories.py
(+40 files in other folders)
